# cc-pyscript-sample-repo

./: 404.html  CHANGELOG.rst  LICENSE  Pipfile  README.rst  changelog.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-test-matrix.yml
_static/: documentation_options.js
docs/: conf.py  index.rst  modules.rst
src/cc_pyscript_sample_repo/: cc_pyscript_sample_repo.py
tests/: test_cc_pyscript_sample_repo.py
