[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = */migrations/*

[tool:pytest]
testpaths =
    tests
    # manually add any additional package names if created
norecursedirs =
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --cov=cc_pyscript_sample_repo
    # manually add --cov= any package names if created
    --cov-branch
    --pyargs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
default_section = THIRDPARTY
not_skip = __init__.py
skip = migrations

[options]
setup_requires = setuptools_scm
